# narrator

./: 99-uinput.rules  LICENSE-MIT  README.md  virtualkeyboard.c
.github/: pull_request_template.md
speech-streamer/: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  get_deepspeech.sh
speech-streamer/rawdio/: Cargo.toml
speech-streamer/rawdio/src/: cpal_audio.rs  lib.rs  main.rs
speech-streamer/src/: cpal_audio.rs  deepspeech_stt.rs  main.rs  streamer.rs  vad.rs
