[workspace]
members = ["rawdio"]
exclude = ["deepspeech-rs"]

[package]
name = "speech-streamer"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]
edition = "2018"
links = "deepspeech"
build = "build.rs"

[dependencies]
deepspeech = { path = "deepspeech-rs" }
rawdio = { path = "rawdio" , default-features = false}
clap = { version = "^2.33", optional = true}
anyhow = { version = "^1.0", optional = true}

[features]
default = ["clap", "anyhow"]